--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -5,6 +5,7 @@
 @import "admin/all-events.scss";
 @import "admin/manage-events.scss";
 @import "navigation/nav.scss";
+@import "sessions/show.scss";
 
 // @import "../js/SearchPage/components/DragAndDrop/style-ver1.scss";
 // @import "../js/SearchPage/components/DragAndDrop/style-ver2.scss";
