--- a/public/css/main.css
+++ b/public/css/main.css
@@ -493,6 +493,58 @@ body {
   border-bottom: solid 1px #222;
 }
 
+.session-container {
+  width: 90%;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.session-item {
+  width: 100%;
+  background-color: #fffaf1;
+  box-shadow: 0px 1px 5px #adadad;
+  margin: 0 0 5% 5%;
+  padding: 4%;
+  border-radius: 5px;
+}
+.session-item button {
+  background-color: #414c6b;
+  border-radius: 5px;
+  width: 80px;
+  font-family: "Comfortaa", cursive;
+  font-size: 15px;
+  padding: 10px 0;
+}
+.session-item button a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 auto;
+}
+.session-item h4 {
+  margin-bottom: 0.9em;
+}
+.session-item p {
+  margin: 0.7em 0;
+}
+
+.table-session {
+  width: 100%;
+}
+.table-session tr {
+  margin: 0;
+}
+.table-session th {
+  border: 1px solid grey;
+  margin: 0;
+  padding: 0.5em;
+}
+.table-session td {
+  border: 1px solid grey;
+  margin: 0;
+  padding: 0.5em;
+  text-align: center;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
