fix to hide sessions already reacted to

--- a/resources/js/SearchPage/components/DragAndDrop/style-ver4.scss
+++ b/resources/js/SearchPage/components/DragAndDrop/style-ver4.scss
@@ -9,7 +9,7 @@ $light-yellow: #f9df74;
 $headers: #414c6b;
 $main-shadow: 0px 1px 5px rgb(173, 173, 173);
 // $font-headers: "Laila", sans-serif;
-$font-headers: 'Nunito', sans-serif;
+$font-headers: "Nunito", sans-serif;
 
 * {
     box-sizing: border-box;
@@ -40,7 +40,7 @@ main {
     box-shadow: 0px 1px 5px rgb(173, 173, 173);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
     height: 90vh;
 }
@@ -155,7 +155,7 @@ h5 {
     li {
         font-size: 1em;
         margin: 6px;
-        font-family: 'Comfortaa', cursive;
+        font-family: "Comfortaa", cursive;
     }
     .instructions-bold {
         font-weight: 900;
@@ -214,7 +214,7 @@ h5 {
     // border-top: 2px dashed grey;
     border-bottom: 2px solid grey;
     border-radius: 5px;
-    font-family: 'Comfortaa', cursive;
+    font-family: "Comfortaa", cursive;
     box-shadow: 3px 2px 5px #222;
     button {
         margin: 0;
