--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -4,6 +4,8 @@
 @import "admin/index.scss";
 @import "admin/all-events.scss";
 @import "admin/manage-events.scss";
+@import "admin/venue-form.scss";
+@import "admin/venue-show.scss";
 @import "navigation/nav.scss";
 @import "sessions/show.scss";
 
