--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -13,6 +13,7 @@
 @import '../js/SearchPage/components/DragAndDrop/style-ver4.scss';
 @import '../js/SearchPage/components/SoloOrGroupPopup/SearchPopUp-ver1.scss';
 @import 'login/login.scss';
+@import '../js/SearchPage/components/SearchResults/SearchResults.scss';
 
 * {
     box-sizing: border-box;
